.JAR unpack rewrite